# bin-embed

./: .clang-format  CMakeLists.txt  README.md
src/: args.cpp  args.h  main.cpp  writer.cpp  writer.h
